--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "readme-generator",
+  "name": "module-9",
   "version": "1.0.0",
-  "description": "generates readme dynamically",
+  "description": "readme generator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Anagha778/readme-generator.git"
   },
-  "author": "Anagha",
+  "keywords": [
+    "abc"
+  ],
+  "author": "anagha",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Anagha778/readme-generator/issues"
